# computer_graphics

./: README.md
3d_obj/: CMakeLists.txt
3d_obj/include/: camera.h
3d_obj/shaders/: pointLightFS.glsl  shadowMapFS.glsl  shadowMapVS.glsl
3d_obj/src/: main.cpp
deferred/: CMakeLists.txt
deferred/include/: camera.h  main.h  stb_image.h  util.h
deferred/lib/: CMakeLists.txt
deferred/shaders/: combineFS.glsl  dof_1FS.glsl  dof_1VS.glsl  gBufferVS.glsl  gauss_blur2FS.glsl  lightFS.glsl  shadowMapFS.glsl  sphereFS.glsl
deferred/src/: frame_buffer.cpp  gbuffer.cpp  landscape.cpp  lbuffer.cpp  lights.cpp  main.cpp  main.h  quad.cpp  sphere.cpp  util.cpp
dof/: CMakeLists.txt
dof/include/: frame_buffer.h
dof/include/glad/: glad.h
dof/shaders/: dof_2FS.glsl  dof_2VS.glsl  dof_3FS.glsl  gauss_blur1FS.glsl  gauss_blur1VS.glsl  gauss_blur2VS.glsl
dof/src/: glad.c  util.cpp
juliaSet/: CMakeLists.txt
juliaSet/lib/: CMakeLists.txt
juliaSet/lib/ImageMagick-7.0.7-4/: configure
juliaSet/lib/ImageMagick-7.0.7-4/MagickCore/: magick-baseconfig.h  version.h
juliaSet/lib/ImageMagick-7.0.7-4/config/: configure.xml.in
juliaSet/resources/: texture
juliaSet/src/: event.cpp  event.h  fragment.fsh  main.cpp  util.cpp  util.h  vertex.vsh
